--- a/packages/docx-templates/package.json
+++ b/packages/docx-templates/package.json
@@ -23,11 +23,6 @@
     "url": "git+https://github.com/guigrpa/docx-templates.git"
   },
   "scripts": {
-    "compile": "yarn compile:prepare && yarn compile:copy && yarn compile:run",
-    "compileWatch": "yarn compile:prepare && yarn compile:copy && yarn compile:run --watch",
-    "compile:prepare": "rm -rf ./lib && mkdir lib",
-    "compile:copy": "flow-copy-source -i \"**/__mocks__/**\" -i \"**/__tests__/**\" src lib",
-    "compile:run": "babel --out-dir lib --ignore \"**/__mocks__/**\",\"**/__tests__/**\" src",
     "start": "cd examples/swapi && node swapi-node swapi-complex.docx",
     "travis": "yarn compile && yarn test",
     "jest": "jest --watch --coverage",
@@ -42,28 +37,28 @@
     "node": ">=6"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0",
     "fs-extra": "^3.0.1",
     "jszip": "^3.2.2",
     "sax": "1.2.4",
-    "timm": "^1.6.2"
+    "timm": "^1.6.2",
+    "ts-jest": "^25.2.1",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-jest": "18.0.0",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
+    "@types/fs-extra": "^8.1.0",
+    "@types/md5": "^2.1.33",
+    "@types/node": "^13.9.2",
+    "@types/jest": "^25.1.4",
     "coveralls": "2.13.1",
-    "jest": "18.0.0",
+    "jest": "^25.1.0",
     "md5": "^2.2.1",
     "mockdate": "^2.0.5",
     "nyc": "10.0.0",
     "prettier": "^1.18.2",
     "storyboard": "^3.1.4",
     "storyboard-listener-console": "^3.1.4",
+    "ts-jest": "^25.2.1",
+    "typescript": "^3.8.3",
     "yaqrcode": "^0.2.1"
   },
   "jest": {
