--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "docx-templates",
-  "private": true,
   "version": "3.1.1",
   "description": "Template-based docx report creation",
+  "main": "lib/indexNode.js",
+  "browser": "lib/indexBrowser.js",
   "author": "Guillermo Grau Panea",
   "license": "MIT",
   "keywords": [
@@ -21,36 +22,57 @@
     "type": "git",
     "url": "git+https://github.com/guigrpa/docx-templates.git"
   },
-  "workspaces": [
-    "packages/*"
-  ],
   "scripts": {
-    "compile": "oao run-script compile",
-    "compileWatch": "oao run-script compileWatch --parallel",
-    "build": "yarn lint && yarn flow && yarn test && yarn compile && yarn docs && yarn xxl && oao prepublish",
-    "docs": "extract-docs --template docs/templates/README.md --output README.md",
-    "lint": "eslint packages",
-    "flow": "flow check || exit 0",
-    "xxl": "xxl --src packages/docx-templates/src --exclude __tests__",
-    "jest": "cd packages/docx-templates && yarn jest",
-    "test": "cd packages/docx-templates && yarn test",
-    "travis": "cd packages/docx-templates && yarn travis",
-    "prettier": "prettier --single-quote --trailing-comma es5 --write \"packages/**/*.js\""
+    "travis": "yarn compile && yarn test",
+    "jest": "jest --watch --coverage",
+    "test": "yarn testCovFull",
+    "testCovFull": "yarn testCovPrepare && yarn testDev && yarn testCovReport",
+    "testCovPrepare": "rm -rf ./coverage .nyc_output .nyc_tmp && mkdir .nyc_tmp",
+    "testDev": "NODE_ENV=development jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-dev.json && rm -rf .nyc_output",
+    "testProd": "NODE_ENV=production jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-prod.json && rm -rf .nyc_output",
+    "testCovReport": "cp -r .nyc_tmp .nyc_output && nyc report --reporter=html --reporter=lcov --reporter=text"
+  },
+  "engines": {
+    "node": ">=6"
+  },
+  "dependencies": {
+    "jszip": "^3.2.2",
+    "sax": "1.2.4",
+    "timm": "^1.6.2",
+    "ts-jest": "^25.2.1",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "babel-eslint": "^9.0.0",
-    "eslint": "^5.5.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.0.1",
-    "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
-    "extract-docs": "^1.6.1",
-    "flow-bin": "^0.49.1",
-    "flow-copy-source": "1.2.0",
-    "oao": "^1.7.0",
+    "@types/fs-extra": "^8.1.0",
+    "@types/jest": "^25.1.4",
+    "@types/jszip": "^3.1.7",
+    "@types/node": "^13.9.2",
+    "@types/qrcode": "^1.3.4",
+    "@types/sax": "^1.2.1",
+    "coveralls": "2.13.1",
+    "jest": "^25.1.0",
+    "mockdate": "^2.0.5",
+    "nyc": "10.0.0",
     "prettier": "^1.18.2",
-    "xxl": "^1.2.0"
+    "qrcode": "^1.4.4",
+    "ts-jest": "^25.2.1",
+    "typescript": "^3.8.3"
+  },
+  "jest": {
+    "testRegex": "src/.*__tests__/.*\\.(test|spec)\\.(js|jsx)$",
+    "coverageDirectory": ".nyc_output",
+    "coverageReporters": [
+      "json",
+      "text",
+      "html"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/debug.js",
+      "!test/**",
+      "!**/node_modules/**",
+      "!**/__tests__/**",
+      "!**/__mocks__/**"
+    ]
   }
 }
