--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "prepack": "yarn compile",
     "travis": "yarn compile && yarn test",
     "jest": "jest --watch --coverage",
-    "test": "yarn prettier-check && yarn testCovFull",
+    "test": "yarn lint && yarn testCovFull",
     "testCovFull": "yarn testCovPrepare && yarn testDev && yarn testCovReport",
     "testCovPrepare": "rm -rf ./coverage .nyc_output .nyc_tmp && mkdir .nyc_tmp",
     "testDev": "NODE_ENV=development jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-dev.json && rm -rf .nyc_output",
     "testCovReport": "cp -r .nyc_tmp .nyc_output && nyc report --reporter=html --reporter=lcov --reporter=text",
-    "prettier": "prettier --write \"src/**/*.ts\"",
-    "prettier-check": "prettier --check \"src/**/*.ts\""
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint-fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "engines": {
     "node": ">=6"
@@ -49,7 +49,14 @@
     "@types/node": "^13.9.2",
     "@types/qrcode": "^1.3.4",
     "@types/sax": "^1.2.1",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
     "coveralls": "^3.0.11",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
     "mockdate": "^2.0.5",
     "nyc": "^15.0.1",
