--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "prepack": "yarn compile",
     "travis": "yarn compile && yarn test",
     "jest": "jest --watch --coverage",
-    "test": "yarn prettier-check && yarn testCovFull",
+    "test": "yarn lint && yarn testCovFull",
     "testCovFull": "yarn testCovPrepare && yarn testDev && yarn testCovReport",
     "testCovPrepare": "rm -rf ./coverage .nyc_output .nyc_tmp && mkdir .nyc_tmp",
     "testDev": "NODE_ENV=development jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-dev.json && rm -rf .nyc_output",
     "testCovReport": "cp -r .nyc_tmp .nyc_output && nyc report --reporter=html --reporter=lcov --reporter=text",
-    "prettier": "prettier --write \"src/**/*.ts\"",
-    "prettier-check": "prettier --check \"src/**/*.ts\""
+    "lint": "eslint src",
+    "lint-fix": "eslint --fix src"
   },
   "engines": {
     "node": ">=6"
