--- a/examples/example-browserify/package.json
+++ b/examples/example-browserify/package.json
@@ -22,7 +22,7 @@
     "url": "git+https://github.com/guigrpa/docx-templates.git"
   },
   "scripts": {
-    "build": "browserify ../docx-templates/lib/indexBrowser.js --s docx-templates -u ../docx-templates/lib/debug.js > public/docx-templates.js",
+    "build": "browserify ../../lib/index.js --s docx-templates -u ../docx-templates/lib/debug.js > public/docx-templates.js",
     "start": "yarn build && node server"
   },
   "dependencies": {
