--- a/examples/example-webpack/package.json
+++ b/examples/example-webpack/package.json
@@ -31,6 +31,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -40,7 +41,7 @@
     "isomorphic-fetch": "2.2.1",
     "prettier": "^1.18.2",
     "webpack": "^4.39.2",
-    "webpack-cli": "^2.0.12",
+    "webpack-cli": "^3.3.11",
     "yaqrcode": "^0.2.1"
   }
 }
