--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "compile": "tsc",
+    "prepack": "yarn compile",
     "travis": "yarn compile && yarn test",
     "jest": "jest --watch --coverage",
     "test": "yarn prettier-check && yarn testCovFull",
@@ -40,9 +41,7 @@
   "dependencies": {
     "jszip": "^3.2.2",
     "sax": "1.2.4",
-    "timm": "^1.6.2",
-    "ts-jest": "^25.2.1",
-    "typescript": "^3.8.3"
+    "timm": "^1.6.2"
   },
   "devDependencies": {
     "@types/jest": "^25.1.4",
