--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "@types/node": "^13.9.2",
     "@types/qrcode": "^1.3.4",
     "@types/sax": "^1.2.1",
-    "coveralls": "2.13.1",
+    "coveralls": "^3.0.11",
     "jest": "^25.1.0",
     "mockdate": "^2.0.5",
-    "nyc": "10.0.0",
-    "prettier": "^1.18.2",
+    "nyc": "^15.0.1",
+    "prettier": "^2.0.4",
     "qrcode": "^1.4.4",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
