--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jest": "^25.1.0",
     "mockdate": "^2.0.5",
     "nyc": "^15.0.1",
+    "oao": "^1.8.0",
     "prettier": "^2.0.4",
     "qrcode": "^1.4.4",
     "rimraf": "^3.0.2",
